nginx-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pythonapp-deployment
  labels:
    app: python-service
spec:
  replicas: 2 
  selector:
    matchLabels:
      app: python-service
  template:
    metadata:
      labels:
        app: python-service
    spec:
      containers:
      - name: python-app-pod
        image: python-app:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
