service-loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-service-load
spec:
  type: LoadBalancer
  selector:
    app: python-service
  ports:
    - port: 80
      targetPort: 8000
      nodePort: 30008
