service-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-service-node
spec:
  type: NodePort
  selector:
    app: python-service
  ports:
    - port: 80
      targetPort: 8000
      nodePort: 30007
