ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-example
spec:
  ingressClassName: nginx
  rules:
  - host: "foo.bar.com" 
    http:
      paths:
      - path: "/demo"
        pathType: Prefix
        backend:
          service:
            name: my-service-node 
            port:
              number: 80
